<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable = "false">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>

    <!--Location settings -->
    <string name="default_location" translatable = "false">Milan</string>
    <string name="location_key" translatable = "false">location</string>
    <string name="location_label" translatable = "false">Location</string>


    <!--Metric settings-->
    <string name="metric_string" translatable = "false">Metric</string>
    <string name="imperial_string" translatable = "false">Imperial</string>
    <string name="unit_key" translatable = "false">unit</string>
    <string name="unit_label" translatable = "false">Temperature Unit</string>
    <string-array name="pref_units_options" translatable = "false">
        <item>@string/metric_string</item>
        <item>@string/imperial_string</item>
    </string-array>
    <string-array name="pref_units_values" translatable = "false">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
</resources>
