<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/location_key"
        android:title="@string/location_label"
        android:defaultValue="@string/default_location"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
<!--
    <CheckBoxPreference
        android:key="@string/unit_key"
        android:title="@string/unit_label"
        android:summary="@string/pref_description_social_recommendations"
        android:defaultValue="true" />
-->
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <ListPreference
        android:key="@string/unit_key"
        android:title="@string/unit_label"
        android:defaultValue="@string/metric_string"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"/>

</PreferenceScreen>
